--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
       rel="stylesheet"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
     <title>GTK Overlays</title>
   </head>
   <body>
